# ReEngine

./: CMakeLists.txt  ParticleOpenGl.cpp  ReEngine.sln  cmake_install.cmake  imgui.ini  main  untitled
Libs/Lib/ReEngine/shaders/LightSourceShader/: LightSource.fs
Private/Engine/Components/: Collision.cpp  Mesh.cpp  StaticMesh.cpp
Private/Engine/Components/Collision/: AABB.cpp  Octree.cpp
Private/Engine/Core/: Application.cpp  FrameBuffer.cpp  Window.cpp  WindowManager.cpp
Private/Engine/Core/Context/: OpenGlContext.cpp  OpenGlFrameBuffer.cpp  RenderContext.cpp  UIContext.cpp
Private/Engine/Core/Coordinator/: ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  Event.cpp  EventManager.cpp  SystemManager.cpp
Private/Engine/Core/Reflection/: ReflectionRegistry.cpp  ReflectionTest.cpp
Private/Engine/Systems/: System.cpp
Private/Engine/Systems/Animation/: AnimationSequence.cpp  AnimationSystem.cpp
Private/Engine/Systems/Input/: CameraControlSystem.cpp  PlayerControlSystem.cpp
Private/Engine/Systems/Physics/: PhysicsSystem.cpp
Private/Engine/Systems/Render/: RenderSystem.cpp  Shader.cpp
Private/Engine/Systems/UI/: UiSystem.cpp
Private/Engine/Systems/UI/Panels/: AddingPanel.cpp  AnimationPanel.cpp  ControlPanel.cpp  FileBrowser.cpp  ItemsSelectionPanel.cpp  KeyframeEditorPanel.cpp  PropertyPanel.cpp  SceneView.cpp
Public/Engine/Components/: Animated.h  Gravity.h  LightSource.h  Mesh.h  Renderable.h  RigidBody.h  StaticMesh.h  Thrust.h  Transform.h
Public/Engine/Components/Collision/: AABB.h  Octree.h
Public/Engine/Core/: AnimationTypes.h  Application.h  Types.h  Window.h
Public/Engine/Core/Context/: OpenGlFrameBuffer.h
Public/Engine/Core/Coordinator/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  SystemManager.h
Public/Engine/Core/Reflection/: ReflectionMacro.h  ReflectionRegistry.h  ReflectionTest.h
Public/Engine/Systems/: System.h
Public/Engine/Systems/Animation/: AnimationSequence.h  AnimationSystem.h
Public/Engine/Systems/Input/: CameraControlSystem.h
Public/Engine/Systems/Physics/: PhysicsSystem.h
Public/Engine/Systems/Render/: RenderSystem.h  Shader.h
Public/Engine/Systems/UI/: UiSystem.h
Public/Engine/Systems/UI/Panels/: AddingPanel.h  ControlPanel.h  KeyframeEditorPanel.h  PropertyPanel.h  SceneView.h  UIComponent.h
ReEngine/: ApplicationAPI.cpp  ApplicationAPI.h  ComponentBasic.h  ReEngine.cpp  ReEngine.vcxproj  ReEngine.vcxproj.filters  Script.h  ScriptRegistry.cpp  ScriptRegistry.h
ReEngine/Private/Engine/Components/: BehaviourScript.cpp  Collision.cpp  Mesh.cpp  StaticMesh.cpp
ReEngine/Private/Engine/Components/Collision/: AABB.cpp  Octree.cpp
ReEngine/Private/Engine/Core/: Application.cpp  WindowManager.cpp
ReEngine/Private/Engine/Core/Coordinator/: ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  Event.cpp  EventManager.cpp  GenericComponentArray.cpp  SystemManager.cpp
ReEngine/Private/Engine/Core/Reflection/: ReflectionRegistry.cpp  ReflectionTest.cpp
ReEngine/Private/Engine/Systems/: System.cpp
ReEngine/Private/Engine/Systems/Animation/: AnimationSequence.cpp  AnimationSystem.cpp
ReEngine/Private/Engine/Systems/Behaviour/: BehaviourSystem.cpp
ReEngine/Private/Engine/Systems/Input/: CameraControlSystem.cpp  PlayerControlSystem.cpp
ReEngine/Private/Engine/Systems/Physics/: PhysicsSystem.cpp
ReEngine/Private/Engine/Systems/Render/: RenderSystem.cpp
ReEngine/Private/Engine/Systems/UI/: UiSystem.cpp
ReEngine/Public/Engine/Components/: BehaviourScript.h  Camera.h  Collision.h  Gravity.h  Mesh.h  Renderable.h  RigidBody.h  StaticMesh.h  Thrust.h  Transform.h
ReEngine/Public/Engine/Components/Collision/: AABB.h  Octree.h
ReEngine/Public/Engine/Core/: AnimationTypes.h  Application.h
ReEngine/Public/Engine/Core/Coordinator/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  GenericComponentArray.h  SystemManager.h
ReEngine/Public/Engine/Core/Reflection/: ReflectionMacro.h  ReflectionRegistry.h  ReflectionTest.h
ReEngine/Public/Engine/Systems/: System.h
ReEngine/Public/Engine/Systems/Animation/: AnimationSequence.h  AnimationSystem.h
ReEngine/Public/Engine/Systems/Behaviour/: BehaviourSystem.h
ReEngine/Public/Engine/Systems/Input/: CameraControlSystem.h  PlayerControlSystem.h
ReEngine/Public/Engine/Systems/Physics/: PhysicsSystem.h
ReEngine/Public/Engine/Systems/Render/: RenderSystem.h
ReEngine/Public/Engine/Systems/UI/: UiSystem.h
ReEngine/shaders/: Default.vs
ReEngineCore/: CoreExport.h  Logger.h  ProjectBuilder.cpp  ProjectBuilder.h  ReEngineCore.vcxproj  ReEngineCore.vcxproj.filters  ReTypes.h
ReEngineCore/System/: System.h
ReEngineEditor/: ApplicationWrapper.cpp  ApplicationWrapper.h  CoordinatorWrapper.cpp  CoordinatorWrapper.h  FrameBuffer.cpp  ReEngineEditor.cpp  ReEngineEditor.vcxproj  ReEngineEditor.vcxproj.filters  Window.cpp  Window.h  imgui.ini
ReEngineEditor/Context/: OpenGlContext.cpp  OpenGlFrameBuffer.cpp  RenderContext.cpp  RenderContext.h  UIContext.cpp
ReEngineEditor/Panels/: AddingPanel.cpp  AddingPanel.h  AnimationPanel.cpp  AnimationPanel.h  ControlPanel.cpp  ControlPanel.h  FileBrowser.cpp  FileBrowser.h  ItemsSelectionPanel.cpp  KeyframeEditorPanel.cpp  KeyframeEditorPanel.h  PropertyPanel.cpp  PropertyPanel.h  SceneView.cpp  SceneView.h  UIComponent.h
ReEngineEditor/shaders/: Default.fs
ReEngineReflectionCore/: ReflectionCore.vcxproj  ReflectionCore.vcxproj.filters  ReflectionCoreExport.h  ReflectionEngine.cpp  ReflectionEngine.h  ReflectionHelpers.h  ReflectionMacros.h
Tools/PyhtonBuildConfig/: Build.py
Tools/PyhtonCodeGen/: CodeGen.py  requirements.txt
Tools/PythonProjectCreator/: main.py
Tools/PythonProjectCreator/templates/: sln.jinja  vcxproj.jinja
